--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script>
+        
     </head>
     <body class="menu-hidden">
         <div class="header">
@@ -51,6 +52,7 @@
         <script src="http://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
         <script src="http://google.com/jsapi"></script>
         <script src="js/app.js"></script>
+        <script src="jasmine/spec/jasmine-jquery.js"></script>
 
         <script src="jasmine/spec/feedreader.js"></script>
     </body>
